--- a/index.html
+++ b/index.html
@@ -18,11 +18,49 @@
 </head>
 
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">RPS</h1>
+        </div>
+    </div>
     <div class="container">
-        <div class="row">
-            <button id="rock" class="choice">Rock</button>
-            <button id="paper" class="choice">Paper</button>
-            <button id="scissors" class="choice">Scissors</button>
+
+
+        <div class="row justify-content-center">
+            <div class="card xs-col-3" style="width: 18rem;">
+                    <div class="card-header">username</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <button id="rock" class="choice">Rock</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button id="paper" class="choice">Paper</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button id="scissors" class="choice">Scissors</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="card text-white bg-primary" style="max-width: 18rem;">  
+                <div class="card-body">
+                  <h5 class="card-title">Primary card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            <div class="card xs-col-3" style="width: 18rem;">
+                    <div class="card-header">username</div>
+                <ul class="list-group list-group-flush ">
+                    <li class="list-group-item">
+                        <button id="rock" class="choice justify-content-center">Rock</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button id="paper" class="choice">Paper</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button id="scissors" class="choice">Scissors</button>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="row">
             <form id="search-form" class="mx-auto m-3">
