--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <div class="card xs-col-3" style="width: 18rem;">
                     <div class="card-header">username</div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <button id="rock" class="choice">Rock</button>
+                    <li id="rock" class="list-group-item choice1">
+                        Rock
                     </li>
-                    <li class="list-group-item">
-                        <button id="paper" class="choice">Paper</button>
+                    <li id="paper" class="list-group-item choice1">
+                        Paper
                     </li>
-                    <li class="list-group-item">
-                        <button id="scissors" class="choice">Scissors</button>
+                    <li id="scissors" class="list-group-item choice1">
+                        Scissors
                     </li>
                 </ul>
             </div>
@@ -50,14 +50,14 @@
             <div class="card xs-col-3" style="width: 18rem;">
                     <div class="card-header">username</div>
                 <ul class="list-group list-group-flush ">
-                    <li class="list-group-item">
-                        <button id="rock" class="choice justify-content-center">Rock</button>
+                    <li id = "rock" class="list-group-item choice2">
+                        Rock
                     </li>
-                    <li class="list-group-item">
-                        <button id="paper" class="choice">Paper</button>
+                    <li id = "paper" class="list-group-item choice2">
+                        Paper
                     </li>
-                    <li class="list-group-item">
-                        <button id="scissors" class="choice">Scissors</button>
+                    <li id = "scissors" class="list-group-item choice2">
+                        Scissors
                     </li>
                 </ul>
             </div>
