--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
         <div class="row justify-content-center">
             <div class="card xs-col-3" style="width: 18rem;">
-                <span id="chosen1" style="display: none;">Player 1 has made selection!</span>
                 <div class="card-header">player1</div>
-                <ul class="list-group list-group-flush">
+                <div id="connect1">Awaiting Connection</div>
+                <span id="chosen1" style = "display: none;">Player 1 has made selection!</span>
+                <ul id ="choose1" style = "display: none;" class="list-group list-group-flush">
                     <li id="rock" class="list-group-item choice1">
                         Rock
                     </li>
@@ -48,9 +49,10 @@
                 </div>
             </div>
             <div class="card xs-col-3" style="width: 18rem;">
-                <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
                 <div class="card-header">player2</div>
-                <ul class="list-group list-group-flush ">
+                <div id="connect2">Awaiting Connection</div>
+                <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
+                <ul id ="choose2" style = "display: none;" class="list-group list-group-flush ">
                     <li id="rock" class="list-group-item choice2">
                         Rock
                     </li>
