--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row justify-content-center"> 
+        <!-- <div class="row justify-content-center">
             <div class="card xs-col-3" style="width: 18rem;">
                 <form id="search-form">
                     <label for="searchTerm">Message</label>
@@ -74,12 +74,12 @@
             <div class="card xs-col-3" style="width: 18rem;">
             </div>
             <div class="card xs-col-3" style="width: 18rem;">
-                    <form id="search-form">
-                            <label for="searchTerm">Message</label>
-                            <input type="text" id="messagetext">
-                            <input id="sendmessage" type="submit" value="Send">
-                        </form>
-                </div>
+                <form id="search-form">
+                    <label for="searchTerm">Message</label>
+                    <input type="text" id="messagetext">
+                    <input id="sendmessage" type="submit" value="Send">
+                </form>
+            </div>
         </div>
     </div>
     <div class="card">
@@ -98,7 +98,7 @@
                 Change a few things up and try submitting again.
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
