--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- ionic -->
     <script src="http://code.ionicframework.com/1.3.3/js/ionic.bundle.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid bg-primary">
         <div class="container">
-            <h1 class="display-4 text-center">RPS</h1>
+            <h1 class="display-4 text-center"> <i class="far fa-hand-rock"></i> Rock <i class="far fa-hand-paper"></i> Paper <i class="far fa-hand-scissors"></i> Scissors </h1>
         </div>
     </div>
     <div class="container">
@@ -33,13 +34,13 @@
                 <span id="chosen1" style = "display: none;">Player 1 has made selection!</span>
                 <ul id ="choose1" style = "display: none;" class="list-group list-group-flush">
                     <li id="rock" class="list-group-item choice1">
-                        Rock
+                        <i class="fas fa-hand-rock"></i> Rock
                     </li>
                     <li id="paper" class="list-group-item choice1">
-                        Paper
+                        <i class="fas fa-hand-paper"></i> Paper
                     </li>
                     <li id="scissors" class="list-group-item choice1">
-                        Scissors
+                        <i class="fas fa-hand-scissors"></i> Scissors
                     </li>
                 </ul>
             </div>
@@ -54,13 +55,13 @@
                 <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
                 <ul id ="choose2" style = "display: none;" class="list-group list-group-flush ">
                     <li id="rock" class="list-group-item choice2">
-                        Rock
+                        <i class="fas fa-hand-rock"></i> Rock
                     </li>
                     <li id="paper" class="list-group-item choice2">
-                        Paper
+                        <i class="fas fa-hand-paper"></i> Paper
                     </li>
                     <li id="scissors" class="list-group-item choice2">
-                        Scissors
+                        <i class="fas fa-hand-scissors"></i> Scissors
                     </li>
                 </ul>
             </div>
@@ -99,8 +100,8 @@
 
                 Change a few things up and try submitting again.
             </div>
-        </div>
-    </div> -->
+        </div> -->
+    </div> 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
