--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="row justify-content-center">
             <div class="card xs-col-3" style="width: 18rem;">
-                <div class="card-header">player1</div>
+                <div class="card-header text-white bg-dark">player1</div>
                 <div id="connect1">Awaiting Connection</div>
                 <span id="chosen1" style = "display: none;">Player 1 has made selection!</span>
                 <ul id ="choose1" style = "display: none;" class="list-group list-group-flush">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="card xs-col-3" style="width: 18rem;">
-                <div class="card-header">player2</div>
+                <div class="card-header text-white bg-dark">player2</div>
                 <div id="connect2">Awaiting Connection</div>
                 <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
                 <ul id ="choose2" style = "display: none;" class="list-group list-group-flush ">
