looking really good

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="card text-white bg-primary" style="max-width: 18rem;">
+            <div class="card text-white bg-primary text-center" style="max-width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title result">Let the Game Begin!</h5>
+                    <h4 class="wincount">0-0</h4>
                 </div>
             </div>
             <div class="card xs-col-3" style="width: 18rem;">
@@ -66,7 +67,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row justify-content-center"> 
+        <!-- <div class="row justify-content-center"> 
             <div class="card xs-col-3" style="width: 18rem;">
                 <form id="search-form">
                     <label for="searchTerm">Message</label>
@@ -85,7 +86,7 @@
                 </div>
         </div>
     </div>
-    <div class="card">
+    <div class="card"> -->
         <!-- <div id="messenger" class="card-body">
             <div class="alert alert-success" style="height:35px;padding-top:8px;width:50%;Float:left;margin-left:10%;">
                 <span class="glyphicon glyphicon-ok"></span>
@@ -101,7 +102,7 @@
                 Change a few things up and try submitting again.
             </div>
         </div> -->
-    </div> 
+    <!-- </div>  -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
