--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- ionic -->
     <script src="http://code.ionicframework.com/1.3.3/js/ionic.bundle.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid bg-primary">
         <div class="container">
-            <h1 class="display-4 text-center"> <i class="far fa-hand-rock"></i> Rock <i class="far fa-hand-paper"></i> Paper <i class="far fa-hand-scissors"></i> Scissors </h1>
+            <h1 class="display-4 text-center">
+                <i class="far fa-hand-rock"></i> Rock
+                <i class="far fa-hand-paper"></i> Paper
+                <i class="far fa-hand-scissors"></i> Scissors </h1>
         </div>
     </div>
     <div class="container">
@@ -31,8 +35,8 @@
             <div class="card xs-col-3" style="width: 18rem;">
                 <div class="card-header text-white bg-dark">player1</div>
                 <div id="connect1">Awaiting Connection</div>
-                <span id="chosen1" style = "display: none;">Player 1 has made selection!</span>
-                <ul id ="choose1" style = "display: none;" class="list-group list-group-flush">
+                <span id="chosen1" style="display: none;">Player 1 has made selection!</span>
+                <ul id="choose1" style="display: none;" class="list-group list-group-flush">
                     <li id="rock" class="list-group-item choice1">
                         <i class="fas fa-hand-rock"></i> Rock
                     </li>
@@ -54,7 +58,7 @@
                 <div class="card-header text-white bg-dark">player2</div>
                 <div id="connect2">Awaiting Connection</div>
                 <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
-                <ul id ="choose2" style = "display: none;" class="list-group list-group-flush ">
+                <ul id="choose2" style="display: none;" class="list-group list-group-flush ">
                     <li id="rock" class="list-group-item choice2">
                         <i class="fas fa-hand-rock"></i> Rock
                     </li>
@@ -66,6 +70,16 @@
                     </li>
                 </ul>
             </div>
+        </div>
+
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+            <label for="searchTerm">Username</label>
+            <input type="text" id="messagetext">
+            <input id="username" type="submit" value="Send">
+        </div>
+            <div class="col-4"></div>
         </div>
         <!-- <div class="row justify-content-center"> 
             <div class="card xs-col-3" style="width: 18rem;">
@@ -102,8 +116,8 @@
                 Change a few things up and try submitting again.
             </div>
         </div> -->
-    <!-- </div>  -->
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+        <!-- </div>  -->
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 
