--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="row justify-content-center">
             <div class="card xs-col-3" style="width: 18rem;">
-                <div class="card-header text-white bg-dark">player1</div>
+                <div class="card-header text-white bg-dark user1">player1</div>
                 <div id="connect1">Awaiting Connection</div>
                 <span id="chosen1" style="display: none;">Player 1 has made selection!</span>
                 <ul id="choose1" style="display: none;" class="list-group list-group-flush">
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="card xs-col-3" style="width: 18rem;">
-                <div class="card-header text-white bg-dark">player2</div>
+                <div class="card-header text-white bg-dark user2">player2</div>
                 <div id="connect2">Awaiting Connection</div>
                 <span id="chosen2" style="display: none;">Player 2 has made selection!</span>
                 <ul id="choose2" style="display: none;" class="list-group list-group-flush ">
@@ -72,11 +72,11 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row username">
             <div class="col-4"></div>
             <div class="col-4">
             <label for="searchTerm">Username</label>
-            <input type="text" id="messagetext">
+            <input type="text" id="usertext">
             <input id="username" type="submit" value="Send">
         </div>
             <div class="col-4"></div>
